Creation et modification de l'index

--- a/index.html
+++ b/index.html
@@ -1,1 +1,35 @@
+<!DOCTYPE html>
 
+	<head>
+		<title>ACI</title>
+	</head>
+
+	<body>
+		<header>
+			<h1>Titre</h1>
+		</header>
+
+		<main>
+			<section>
+				<div>
+					<nav>
+						<ul>
+							<li>Nicolas</li>
+							<li>Thibaud</li>
+						</ul>
+					</nav>
+				</div>
+			</section>
+		</main>
+
+		<footer>
+			<p>
+				Pied de page
+				<br />
+				@ 2018
+			</p>
+		</footer>
+
+	</body>
+
+</html>
